--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -55,9 +55,14 @@ h2 {
     text-align: left;
     float: right;
     margin-left: 2em;
+    border-radius: 5%;
 }
 
 .slika img {
     width: 100%;
     height: auto;
+}
+
+.slika p:last-child {
+    font-size: 0.8em;
 }
